add simply study-program endpoint to scraper
